change navigate manager

--- a/CoCo/views/partials/navbar.hbs
+++ b/CoCo/views/partials/navbar.hbs
@@ -32,12 +32,12 @@
                             QUẢN LÝ
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="./managers/list-manager-page.html">XEM DANH
+                            <li><a class="dropdown-item" href="/admin/manager">XEM DANH
                                     SÁCH</a>
                             </li>
-                            <li><a class="dropdown-item" href="./managers/add-manager-page.html">THÊM NGƯỜI QUẢN
+                            <li><a class="dropdown-item" href="/admin/manager/add">THÊM NGƯỜI QUẢN
                                     LÝ</a></li>
-                            <li><a class="dropdown-item" href="./managers/list-manager-history-page.html">LỊCH
+                            <li><a class="dropdown-item" href="/admin/manager/history">LỊCH
                                     SỬ
                                     HOẠT ĐỘNG</a></li>
                         </ul>
