--- a/CoCo/views/admin/managers/add-manager-page.hbs
+++ b/CoCo/views/admin/managers/add-manager-page.hbs
@@ -6,7 +6,7 @@
 <div class="container">
     <nav style="--bs-breadcrumb-divider: '>'; --bs-breadcrumb-item-padding-x: 2px; --bs-breadcrumb-divider-color: #A19C9C; --bs-breadcrumb-font-size: 24sp;" aria-label="breadcrumb" class="nav-breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="/admin/manager/list-manager-page">Người quản lý</a></li>
+            <li class="breadcrumb-item"><a href="/admin/manager">Người quản lý</a></li>
             <li class="breadcrumb-item active" aria-current="page">Thêm người quản lý</li>
         </ol>
         </nav>
@@ -16,19 +16,19 @@
             <div class="form-group row">
                 <label for="username" class="col-lg-5 col-sm-5 col-form-label">Tên người dùng</label>
                 <div class="col-lg-7 col-sm-7">
-                    <input type="text" class="form-control" id="username" name="username">
+                    <input type="text" class="form-control" id="username" name="username" required>
                 </div> 
             </div>
             <div class="form-group row">
             <label for="password" class="col-lg-5 col-sm-5 col-form-label">Mật khẩu</label>
             <div class="col-lg-7 col-sm-7">
-                <input type="password" class="form-control" id="password" name="password">
+                <input type="password"  onchange="checkPass();" class="form-control" id="password" name="password" required>
             </div>
             </div>
             <div class="form-group row">
             <label for="re-password" class="col-lg-5 col-sm-5 col-form-label">Nhập lại mật khẩu</label>
             <div class="col-lg-7 col-sm-7">
-                <input type="password" class="form-control" id="re-password" name="rePassword">
+                <input type="password"  onchange="checkPass();" class="form-control" id="re-password" name="rePassword" required>
             </div>
             </div>
             <div class="form-group row">
@@ -49,7 +49,7 @@
             </div>
             <div class="row button">
             <div class="col-sm-10">
-                <button type="submit" class="btn">Lưu</button>
+                <button id="submit" type="submit" class="btn">Lưu</button>
             </div>
             </div>
         </form>
@@ -57,6 +57,16 @@
 </div>
 
 <!-- JS -->
-<script src="js/add-list-manager-history-table.js"></script>
-<script src="../js/pagination.js"></script>
+<script>
+    function checkPass(){
+         var pass  = document.getElementById("password").value;
+         var rpass  = document.getElementById("re-password").value;
+        if(pass != rpass){
+            document.getElementById("submit").disabled = true;
+            alert("Entered Password is not matching!! Try Again");
+        }else{
+            document.getElementById("submit").disabled = false;
+        }
+}
+</script>
 <!-- JS -->
