--- a/CoCo/views/admin/managers/manager-details-page.hbs
+++ b/CoCo/views/admin/managers/manager-details-page.hbs
@@ -7,24 +7,47 @@
 <div class="container">
     <nav style="--bs-breadcrumb-divider: '>'; --bs-breadcrumb-item-padding-x: 2px; --bs-breadcrumb-divider-color: #A19C9C; --bs-breadcrumb-font-size: 24sp;" aria-label="breadcrumb" class="nav-breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="./list-manager-page.html">Người quản lý</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Nguyen Van A</li>
+            <li class="breadcrumb-item"><a href="/admin/manager">Người quản lý</a></li>
+            {{#with manager}}
+            <li class="breadcrumb-item active" aria-current="page">{{username}}</li>
+            {{/with}}
         </ol>
         </nav>
     <div class="content-min">
         <div class="row">
             <div class="col-lg-8 col-md-7 col-sm-12">
-                <div id="manager-history-table" class="table-responsive" style="height: 480px;"></div>
+                <div id="manager-history-table" class="table-responsive" style="height: 480px;">
+                    <table class="table table-striped">
+                        <thead>
+                            <th class="th-style">STT</th>
+                            <th class="th-style">Thời gian</th>
+                            <th class="th-style">Hành động</th>
+                        </thead>
+                        <tbody>
+                            {{#each managerHistories}}
+                                <tr>
+                                    <td class="table-stt">{{stt}}</td>
+                                    <td class="table-date">{{date}}</td>
+                                    <td class="table-action">{{action}}</td>
+                            {{/each}}
+                        </tbody>
+                    </table>
+                </div>
             </div>
             <div class="col-lg-4 col-md-5 col-sm-12 d-flex flex-column">
                 <div class="side-info bg-form p-5">
                     <div class="avatar">
-                        <img class="img-thumbnail" src="images/avatar.png" alt="avatar">
+                        <img class="img-thumbnail" src="/images/admin/avatar.png" alt="avatar">
                     </div>
-                    <div id="name"></div>
+                    {{#with manager}}
+                    <div id="name">{{name}}</div>
+                    {{#ifEquals status false}}
+                    <div id="status">Đang khóa</div>
+                    {{/ifEquals}}
                     <div class="button">
-                        <button type="button" class="custom-btn btn btn-dark text-white btn-sm" onclick="window.location.href='./list-manager-page.html'">Khóa tài khoản</button>
+                        <button type="button" class="custom-btn btn btn-dark text-white btn-sm" onclick="if confirm('Are you sure you want to unlock/lock manager?') window.location.href='/admin/manager/{{_id}}/updateStatus?_method=PUT'">Khóa tài khoản</button>
                     </div>
+                    {{/with}}
                 </div>
             </div>
         </div>
