--- a/CoCo/views/manager/products/edit-product-page.hbs
+++ b/CoCo/views/manager/products/edit-product-page.hbs
@@ -1,17 +1,19 @@
     <link rel="stylesheet" href="/css/manager/products/product-style.css">
     <link rel="stylesheet" href="/css/manager/products/edit-product-page.css">
     <div class="content">
+        {{#with product}}
             <div class="path">
                 <a href="../index.html">Trang chủ > </a>
                 <a href="product-list-page.html">Nhu yếu phẩm > </a>
                 <a href="product-list-page.html">Danh sách nhu yếu phẩm > </a>
-                <a href="product-detail-page.html">Thịt heo 500 gram > </a>
+                <a href="product-detail-page.html">{{name}}> </a>
                 <a href="edit-product-page.html">Chỉnh sửa </a>
             </div>
+            {{/with}}
             {{#with product}}
             <div class="add-product">
                 <h2 style="font-size:36px;">CHỈNH SỬA</h2>
-                <form action="">
+                <form action="edit/submit" method="post">
                     <div>
                         <label class="label-product" for="product-name">Tên</label><br>
                         <input class="input-product" type="text" id="product-name" name="name" placeholder="Nhập tên" style="width:100%;" value="{{name}}"><br>
@@ -34,26 +36,75 @@
                                     <option value="kg">kg</option>
                                     <option value="ml">ml</option>
                                     <option value="l">l</option>
+                                    <option value="cai">cái</option>
                                   </select>
                             </div>
                         </div>
                     </div>
-                    <div style="margin-top:10px;">
-                        <label class="label-product" for="product-img-list">Hình ảnh</label><br>
-                        <div id="product-img-list">
-                            <div class="input-product product-img my-btn">
-                                <img src="/images/thit-heo.jpg" alt="" style="max-width:100%; max-height:100%;">
-                            </div>
-                            <div id="product-img-add" class="input-product product-img my-btn">
-                                <i class="fa-solid fa-plus fa-3x" style="color:var(--grey1);"></i>
-                            </div>
-                        </div>
-                    </div>
+            <div style="margin-top:10px;">
+                <label class="label-product" for="product-img-add">Hình ảnh</label><br/>
+                <input id="img-input" type="file" class="file-input">
+                <div id="product-img-add" class="input-product product-img my-btn">
+                    <img id="product-img" src="" alt="" style="max-width:100%; max-height:100%;" class="invisible">
+                </div>
+            </div>
+            <input type="text" id="product-link" name="image" class="invisible">
                     <div style="width:100%; text-align:center;">
-                        <a class="my-btn btn-primary" href="product-detail-page.html" style="background-color:var(--blue2);">XÁC NHẬN</a>
+                        <input id = "submit-btn" type="submit" class="my-btn btn-primary confirm-btn" value="XÁC NHẬN">
                         <a class="my-btn btn-primary" href="product-detail-page.html" style="background-color:#535353;">HỦY</a>
                     </div>
                 </form>
             </div>
             {{/with}}
-        </div>
+    </div>
+    <script id="MainScript" type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.8.4/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.8.4/firebase-analytics.js";
+  import { getStorage, ref, uploadBytes, uploadBytesResumable, getDownloadURL } from "https://www.gstatic.com/firebasejs/9.8.4/firebase-storage.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyCWJZ2bV570Z4HWrZUfkNY8Vo-TJnnRFis",
+    authDomain: "coco-230de.firebaseapp.com",
+    projectId: "coco-230de",
+    storageBucket: "coco-230de.appspot.com",
+    messagingSenderId: "573979351614",
+    appId: "1:573979351614:web:b63d941ef47e5aa157cf6f",
+    measurementId: "G-ZQXS9DY493"
+  };
+
+  // Initialize Firebase
+  const firebase = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(firebase);
+  const storage = getStorage(firebase);
+    
+  let input = document.getElementById('img-input');
+    let img = document.getElementById('product-img');
+    let link = document.getElementById('product-link');
+    let btn = document.getElementById('submit-btn');
+     btn.disable = true;
+    input.addEventListener('change', function(){
+        if (this.files[0]) {
+            var picture = new FileReader();
+            picture.readAsDataURL(this.files[0]);
+            picture.addEventListener('load', function(event) {
+                img.setAttribute('class', 'visible');
+                img.setAttribute('src', event.target.result)
+                //document.getElementById('uploadedImage').style.display = 'block';
+            });
+           
+            const storageRef = ref(storage, (new Date()).toString());
+             const uploadTask = uploadBytes(storageRef, this.files[0]).then((snapshot) => {
+  console.log('Uploaded a blob or file!');
+      getDownloadURL(snapshot.ref).then((downloadURL) => {
+      link.setAttribute('value', downloadURL);
+      btn.disable=false;
+    });
+});
+        }
+    });
+</script>
