--- a/CoCo/views/related-people/payment-history.hbs
+++ b/CoCo/views/related-people/payment-history.hbs
@@ -62,7 +62,7 @@
               </tr>
             </thead>
             <tbody>
-              {{#each payment}}
+              {{#each pHistory}}
                 <tr>
                   <td>{{dateTime}}</td>
                   <td>{{money}}</td>
