update information flow - related people

--- a/CoCo/views/related-people/cart.hbs
+++ b/CoCo/views/related-people/cart.hbs
@@ -6,15 +6,15 @@
     <a href="package-list">Nhu yếu phẩm > </a>
     <a href="#">Giỏ hàng</a>
   </div>
-{{#with orderedPackages}}
+
   <div id="current-cart">
     <div class="selected-package-container">
       <div class="selected-package">
         <div class="package-image">
-          <img src="images/package_demo.png" alt="package_img" />
+          <img src="/images/related-people/package_demo.png" alt="package_img" />
         </div>
         <div class="package-detail">
-          <div class="package-name">{{ordered.[0].packageName}}</div>
+          <div class="package-name">Thịt cá trứng 1</div>
           <div class="package-products">
             500g thịt heo đùi<br />
             200g cá basa phi lê<br />
@@ -31,7 +31,7 @@
         <div class="total">175,000đ</div>
         <button class="remove-package">
           <img
-            src="images/trash.png"
+            src="/images/related-people/trash.png"
             style="width: 30px; height: 30px; align-self: center;"
             alt="trash_img"
           />
@@ -41,7 +41,7 @@
     <div class="selected-package-container">
       <div class="selected-package">
         <div class="package-image">
-          <img src="images/package_demo.png" alt="package_img" />
+          <img src="/images/related-people/package_demo.png" alt="package_img" />
         </div>
         <div class="package-detail">
           <div class="package-name">Thịt cá trứng 2</div>
@@ -61,7 +61,7 @@
         <div class="total">450,000đ</div>
         <button class="remove-package">
           <img
-            src="images/trash.png"
+            src="/images/related-people/trash.png"
             style="width: 30px; height: 30px; align-self: center;"
             alt="trash_img"
           />
@@ -71,7 +71,7 @@
     <div class="selected-package-container">
       <div class="selected-package">
         <div class="package-image">
-          <img src="images/package_demo.png" alt="package_img" />
+          <img src="/images/related-people/package_demo.png" alt="package_img" />
         </div>
         <div class="package-detail">
           <div class="package-name">Thịt cá trứng 3</div>
@@ -91,7 +91,7 @@
         <div class="total">300,000đ</div>
         <button class="remove-package">
           <img
-            src="images/trash.png"
+            src="/images/related-people/trash.png"
             style="width: 30px; height: 30px; align-self: center;"
             alt="trash_img"
           />
@@ -108,7 +108,7 @@
       <div class="total-cost-text" style="color: red;">925,000đ</div>
     </div>
   </div>
-  {{/with}}
+
 
   <div id="cart-buttons">
     <div id="purchase">
