--- a/CoCo/views/related-people/payment-history.hbs
+++ b/CoCo/views/related-people/payment-history.hbs
@@ -25,9 +25,9 @@
             <span style="color: green">{{balance}}đ</span></div>
         </div>
         <div id="account" class="d-inline-flex justify-content-around">
-          <div id="payment" class="btn-money text-white">Thanh toán
-          </div>
-          <div id="prepaid" class="btn-money text-white">Nạp tiền</div>
+          <a href="account" id="payment" class="btn-money text-white">Thanh toán
+          </a>
+          <a href="package-list" id="prepaid" class="btn-money text-white">Mua hàng</a>
         </div>
       </div>
     {{/with}}
