--- a/CoCo/views/index.hbs
+++ b/CoCo/views/index.hbs
@@ -1,15 +1,32 @@
+<script>
+    console.log("{{role}}");
+    if ("{{role}}" === "admin") {
+        window.localStorage.role = "admin";
+        window.location.href = "admin";
+    }
+    if ("{{role}}" === "manager") {
+        window.localStorage.role = "manager";
+        window.location.href = "manager";
+    }
+    if ("{{role}}" === "related people") {
+        window.localStorage.role = "related people";
+        window.location.href = "related-people";
+    }
+</script>
+
 <section class="container py-5" style="height:800px;margin-top:300px">
     <h1 class="welcome">Chào mừng đến với hệ thống quản lý Covid-19</h1>
 
     <div class="login-form py-5 px-5">
         <form action="/" method="post">
             <div class="form-floating mb-3">
-                <input class="form-control border-2 border-dark" id="floatingInput" placeholder="0123456789">
+                <input class="form-control border-2 border-dark" id="floatingInput" placeholder="0123456789"
+                    name="username">
                 <label for="floatingInput">Số CMND/CCCD</label>
             </div>
             <div class="form-floating">
                 <input type="password" class="form-control border-2 border-dark" id="floatingPassword"
-                    placeholder="Mật khẩu">
+                    placeholder="Mật khẩu" name="password">
                 <label for="floatingPassword">Mật khẩu</label>
             </div>
             <button type="submit" class="sign-in">ĐĂNG NHẬP</button>
@@ -20,13 +37,12 @@
     <div style="clear:both; float:right; max-width: 500px; padding-top: 50px;">
         <h3 style="font-style: italic;">Bạn muốn vào phân hệ người dùng nào?</h3>
         <ul>
-            <li><a style="font-style: italic;" href="./admin/">QUẢN TRỊ VIÊN</a>
-            </li>
+            <li><a style="font-style: italic;" href="./admin/">QUẢN TRỊ VIÊN</a></li>
             <li><a style="font-style: italic;" href="./manager">NGƯỜI QUẢN LÝ</a></li>
             <li><a style="font-style: italic;" href="./related-people/">NGƯỜI ĐƯỢC QUẢN LÝ</a></li>
         </ul>
-        <div style="font-style: italic;">(Phần này chỉ phục vụ việc chuyển luồng đến các phân hệ người dùng và
-            sẽ không xuất hiện trong sản phẩm cuối cùng.)</h3>
+        <div style="font-style: italic;">(Phần này chỉ phục vụ việc chuyển luồng đến các phân hệ người dùng và sẽ không xuất hiện trong sản phẩm cuối cùng.)
         </div>
+    </div>
 
 </section>
