fix edit products

--- a/CoCo/views/manager/products/add-product-page.hbs
+++ b/CoCo/views/manager/products/add-product-page.hbs
@@ -51,7 +51,7 @@
             <input type="text" id="product-link" name="image" class="invisible">
             <div style="width:100%; text-align:center;">
                 <input id = "submit-btn" type="submit" class="my-btn btn-primary confirm-btn" value="XÁC NHẬN">
-                <a class="my-btn btn-primary" href="product-list-page.html" style="background-color:#535353;">HỦY</a>
+                <a class="my-btn btn-primary" href="/manager/products" style="background-color:#535353;">HỦY</a>
             </div>
     </div>
 </div>
